<resources>
    <string name="app_name">MovieFilm</string>
    <string name="search_product">Search Product..</string>
    <string name="popular_with_friend">POPULAR WITH FRIEND</string>
    <string name="discover">Discover</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">Popular</string>
    <string name="star_wars">Star Wars</string>
    <string name="adventure">Adventure</string>
    <string name="action">Action</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="overview">Overview</string>
    <string name="description">Description</string>
    <string name="robert_downey">Robert Downey Jr</string>
    <string name="the_cast">The Cast</string>
    <string name="trailers">Trailers</string>
    <string name="film_hay">Film Hay</string>
    <string name="release_date">Release date</string>
    <string name="_1977_05_25">1977-05-25</string>
    <string name="_210720_votes">210720 votes</string>
    <string name="language">Language</string>
    <string name="todo">TODO</string>
</resources>